# AU423_Project

./: LICENSE  README.md
AU423_Project/: README.md
AU423_Project/custom_control/: teleop_twist_keyboard.py
AU423_Project/description_robot_ipsa/: package.xml
AU423_Project/description_robot_ipsa/launch/: simu.launch
AU423_Project/description_robot_ipsa/meshes/: arm1.stl  arm3.stl
AU423_Project/description_robot_ipsa/models/: seat.stl
AU423_Project/description_robot_ipsa/models/platform/: model.config
AU423_Project/description_robot_ipsa/rviz/: config.rviz
AU423_Project/description_robot_ipsa/urdf/: robot_project.gazebo  robot_project.xacro  transmission.xacro
custom_control/: CMakeLists.txt  package.xml
custom_control/config/: control.yaml
custom_control/launch/: control.launch
description_robot_ipsa/: CMakeLists.txt
description_robot_ipsa/launch/: display.launch
description_robot_ipsa/meshes/: arm2.stl  arm4.stl
description_robot_ipsa/models/: room.stl
description_robot_ipsa/models/basic_box/: model.sdf
description_robot_ipsa/models/platform/: model.sdf
description_robot_ipsa/models/walls/: model.sdf
description_robot_ipsa/rviz/: config_rds.rviz
description_robot_ipsa/worlds/: group4.world
